...
			}
			self.titleLabel.text = self.controllerTitle
			self.titleLabel.textAlignment = .center
			self.titleLabel.font = ACFont.controllerTitleFont.font
		//}
		self.titleLabel.numberOfLines = 0
		self.titleLabel.accessibilityIdentifier = "controllerTitleLabel"
	}

	func setupBottomLayout() {
		self.tabBarController?.tabBar.barTintColor = UIColor.clear
		self.tabBarController?.tabBar.backgroundImage = UIImage()
		self.tabBarController?.tabBar.shadowImage = UIImage()
...
